--- a/subsystems/src/app/subsystems/subsystems.component.html
+++ b/subsystems/src/app/subsystems/subsystems.component.html
@@ -1,40 +1,42 @@
 
 
-<!-- 
+<!--
   This program and the accompanying materials are
   made available under the terms of the Eclipse Public License v2.0 which accompanies
   this distribution, and is available at https://www.eclipse.org/legal/epl-v20.html
-  
+
   SPDX-License-Identifier: EPL-2.0
-  
+
   Copyright Contributors to the Zowe Project.
 -->
 
 <table class="table table-striped table-bordered table-condensed">
   <thead>
     <tr>
-      <th>Type</th>
-      <th class="table-count">Count</th>
-      <th>Explore</th>
+      <th i18n="column-header|Header of Type column@@type-column-header">Type</th>
+      <th class="table-count" i18n="column-header|Header of Count column@@count-column-header">Count</th>
+      <th class="table-count" i18n="column-header|Header of Explore column@@explore-column-header">Explore</th>
     </tr>
   </thead>
   <tbody>
     <tr *ngFor="let key of keys">
       <td>{{key}}</td>
       <td class="table-count">{{subsystems[key].length}}</td>
-      <td><a href (click)="setSubsystemName(key); false;">Explore</a></td>
+      <td>
+        <a href (click)="setSubsystemName(key); false;" i18n="action-header|Title of Explore action@@explore-action-title">Explore</a>
+      </td>
     </tr>
   </tbody>
 </table>
 
 
-<!-- 
+<!--
   This program and the accompanying materials are
   made available under the terms of the Eclipse Public License v2.0 which accompanies
   this distribution, and is available at https://www.eclipse.org/legal/epl-v20.html
-  
+
   SPDX-License-Identifier: EPL-2.0
-  
+
   Copyright Contributors to the Zowe Project.
 -->
 
