--- a/subsystems/src/app/subsystems-root.component.html
+++ b/subsystems/src/app/subsystems-root.component.html
@@ -1,12 +1,12 @@
 
 
-<!-- 
+<!--
   This program and the accompanying materials are
   made available under the terms of the Eclipse Public License v2.0 which accompanies
   this distribution, and is available at https://www.eclipse.org/legal/epl-v20.html
-  
+
   SPDX-License-Identifier: EPL-2.0
-  
+
   Copyright Contributors to the Zowe Project.
 -->
 
@@ -33,15 +33,15 @@
     <form [formGroup]="superSearchForm" (ngSubmit)="superSearch()" class="navbar-form navbar-right">
       <input [formControl]="superSearchInput"
           [class.super-search-error]="superSearchError" [title]="superSearchTitle"
-          class="form-control mr-sm-2 super-search-input" type="text" placeholder="Super Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+          class="form-control mr-sm-2 super-search-input" type="text" placeholder="Search" i18n-placeholder="search placeholder|Placeholder for Seach input@@search-placeholder">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit" i18n="button title|Title of Search button@@search-button-title">Search</button>
     </form>
   </div>
 </nav>
 <div class="containter-fluid root">
   <div class="row" *ngIf="state=='loading' || state=='error'" >
     <div class="col-sm-12 state-loading-error">
-      <span *ngIf="state=='loading'">
+      <span *ngIf="state=='loading'" i18n="loading message|Text of Loading message@@loading-message">
         Loading {{rootBreadCrumb}} ...
       </span>
       <span *ngIf="state=='error'" class="state-error">{{errorMessage}}</span>
@@ -70,13 +70,13 @@
   </div>
 </div>
 
-<!-- 
+<!--
   This program and the accompanying materials are
   made available under the terms of the Eclipse Public License v2.0 which accompanies
   this distribution, and is available at https://www.eclipse.org/legal/epl-v20.html
-  
+
   SPDX-License-Identifier: EPL-2.0
-  
+
   Copyright Contributors to the Zowe Project.
 -->
 
