Minor fix: containter -> container
Signed-off-by: Leonty Chudinov <34669449+lchudinov@users.noreply.github.com>

--- a/subsystems/src/app/subsystems-root.component.html
+++ b/subsystems/src/app/subsystems-root.component.html
@@ -38,7 +38,7 @@
     </form>
   </div>
 </nav>
-<div class="containter-fluid root">
+<div class="container-fluid root">
   <div class="row" *ngIf="state=='loading' || state=='error'" >
     <div class="col-sm-12 state-loading-error">
       <span *ngIf="state=='loading'" i18n="loading message|Text of Loading message@@loading-message">
