Add more i18n attributes where possible  * Update ja, ru, and fr translation files  * New component subsystem-action-text
Signed-off-by: Leonty Chudinov <34669449+lchudinov@users.noreply.github.com>

--- a/subsystems/src/app/subsystem/subsystem.component.html
+++ b/subsystems/src/app/subsystem/subsystem.component.html
@@ -27,7 +27,7 @@
       <tr>
         <th i18n="column-header|Header of Name column@@name-column-header">Name</th>
         <th *ngFor="let action of actions" class="table-count" style="width:10%">
-          {{action.display}}
+          <subsystem-action-text [subsystemAction]="action"></subsystem-action-text>
         </th>
       </tr>
       </thead>
