--- a/subsystems/src/app/subsystem-action-text/subsystem-action-text.component.css
+++ b/subsystems/src/app/subsystem-action-text/subsystem-action-text.component.css
@@ -10,45 +10,7 @@
   Copyright Contributors to the Zowe Project.
 */
 
-span, a, a:hover {
-  padding: 0;
-}
-
-.root {
-  margin: 0 10px 0 10px;
-}
-
-.breadcrumb {
-  padding: 15px 0 0 0;
-  background: inherit;
-}
-
-.breadcrumb > li {
-  margin: 0 3px;
-}
-
-.breadcrumb>li+li:before {
-  color: black;
-}
-
-.breadcrumb-last {
-  font-weight: bold;
-  color: black;
-}
-
-.navbar {
-  background: lightgray;
-  border: 0;
-  padding-top: 4px;
-}
-
-.super-search-input {
-  width: 30em;
-}
-
-.super-search-error {
-  border: 1px solid red;
-}
+/* empty file */
 
 /*
   This program and the accompanying materials are
