Bugfixes for URI, and localized bootstrap
Signed-off-by: Sean Grady <sgrady@rocketsoftware.com>

--- a/webClient/src/app/shared.css
+++ b/webClient/src/app/shared.css
@@ -10,6 +10,8 @@
   Copyright Contributors to the Zowe Project.
 */
 
+@import url('~bootstrap/dist/css/bootstrap.min.css');
+
 a, a:hover {
   color: #337ab7;
 }
